Note re: Optima.
The aim is to consolidate CL matchers. I am not actively maintaining this package; I only forked it to make a simple bugfix. This commit helps direct newcomers to a maintained package.

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+================================================================================
+================================================================================
+NOTE: SUPERSEDED BY OPTIMA, https://github.com/m2ym/optima.
+================================================================================
+================================================================================
+
 This is the README file for cl-match,
 an extended--ML-style pattern-matching library for Common Lisp.
 
